fix: align messages and profile icons

--- a/src/components/views/Header/Header.scss
+++ b/src/components/views/Header/Header.scss
@@ -121,6 +121,10 @@
           color: v.$accentColor;
         }
       }
+
+      .Header-nav-link-messages {
+        margin-top: 0.1rem;
+      }
     }
   }
 }
